About Me Section

--- a/index.html
+++ b/index.html
@@ -126,32 +126,30 @@
                 <div class="about__data">
                     <h3 class="about__heading">Hello, I'm Po Nguyen, CEO & Founder of S.Future</h3>
                     <p class="about__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
-                        mollit anim id est laborum.</p>
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-                        <div class="about__info">
+                        <div class="about__info grid">
                             <div class="about__box">
-                                <i class="about__icon"></i>
-                                <h3 class="about__title"></h3>
-                                <span class="about__subtitle"></span>
+                                <i class="uil uil-award about__icon"></i>
+                                <h3 class="about__title">Experiences</h3>
+                                <span class="about__subtitle">5+ years</span>
                             </div>
                             
                             <div class="about__box">
-                                <i class="about__icon"></i>
-                                <h3 class="about__title"></h3>
-                                <span class="about__subtitle"></span>
-                            </div>
-                            
-                            <div class="about__box">
-                                <i class="about__icon"></i>
-                                <h3 class="about__title"></h3>
-                                <span class="about__subtitle"></span>
+                                <i class=" uil uil-suitcase-alt about__icon"></i>
+                                <h3 class="about__title">Completed</h3>
+                                <span class="about__subtitle">Public Speaking</span>
                             </div>
 
+                            <div class="about__box">
+                                <i class="uil uil-headphones-alt about__icon"></i>
+                                <h3 class="about__title">Support</h3>
+                                <span class="about__subtitle">Online 24/7</span>
+                            </div>
                         </div>
+                        <a href="#contact" class="button"><i class="uil uil-navigator button__icon"></i>
+                        Contact Me
+                        </a>
                 </div>
             </div>
         </section>
