--- a/index.html
+++ b/index.html
@@ -737,7 +737,68 @@
         </section>
 
         <!--===== Testimonials =====-->
-        
+        <section class="testimonials section">
+            <h2 data-heading="Services" class="section__title">Testimonials</h2>
+
+            <div class="testimonials__container container swiper">
+                <div class="swiper-wrapper">
+                    <div class="testimonial__card swiper-slide">
+                        <div class="testimonial__quote">
+                            <i class="bx bxs-quote-alt-left"></i>
+                        </div>
+                        <p class="testimonial__description">Lorem ipsum dolor sit amet, 
+                            consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                            ut labore et dolore magna aliqua.</p>
+                            <h3 class="testimonia__date">March 27. 2020</h3>
+                            <div class="testimonial__profile">
+                                <img src="assets/img/client1.jpg" alt="" class="testimonial__profile-img">
+
+                                <div class="testimonial__profile-data">
+                                    <span class="testimonial__profile-name">Lee Doe</span>
+                                    <span class="testimonial__profile-detail">Director of a company</span>
+                                </div>
+                            </div>
+                    </div>
+
+                    <div class="testimonial__card swiper-slide">
+                        <div class="testimonial__quote">
+                            <i class="bx bxs-quote-alt-left"></i>
+                        </div>
+                        <p class="testimonial__description">Lorem ipsum dolor sit amet, 
+                            consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                            ut labore et dolore magna aliqua.</p>
+                            <h3 class="testimonia__date">March 27. 2020</h3>
+                            <div class="testimonial__profile">
+                                <img src="assets/img/client2.jpg" alt="" class="testimonial__profile-img">
+
+                                <div class="testimonial__profile-data">
+                                    <span class="testimonial__profile-name">Lee Doe</span>
+                                    <span class="testimonial__profile-detail">Director of a company</span>
+                                </div>
+                            </div>
+                    </div>
+
+                    <div class="testimonial__card swiper-slide">
+                        <div class="testimonial__quote">
+                            <i class="bx bxs-quote-alt-left"></i>
+                        </div>
+                        <p class="testimonial__description">Lorem ipsum dolor sit amet, 
+                            consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                            ut labore et dolore magna aliqua.</p>
+                            <h3 class="testimonia__date">March 27. 2020</h3>
+                            <div class="testimonial__profile">
+                                <img src="assets/img/client3.jpg" alt="" class="testimonial__profile-img">
+
+                                <div class="testimonial__profile-data">
+                                    <span class="testimonial__profile-name">Lee Doe</span>
+                                    <span class="testimonial__profile-detail">Director of a company</span>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </section>
 
         <!--===== Contact =====-->
         
