home and about section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
 <body>
     <!--========== SIDEBAR ==========-->
+    <div class="nav__toggle" id="nav-toggle">
+        <i class="uil uil-bars"></i>
+    </div>
     <aside class="sidebar" id="sidebar">
         <nav class="nav">
             <div class="nav__logo">
@@ -56,6 +59,10 @@
             <div class="btn__share">
                 <i class="uil uil-share-alt social__share"></i>
             </div>
+
+            <div class="nav__close" id="nav-close">
+                <i class="uil uil-times"></i>
+            </div>
         </nav>
     </aside>
     <!--========== MAIN ==========-->
@@ -80,10 +87,9 @@
                 <img src="assets/img/home-img.png" alt="" class="home__img">
 
                 <div class="home__data">
-                    <h1 class="home__title">Hello, I'm Po Nguyen</h1>
-                    <h3 class="home__subtitle">Digital Marketing</h3>
-                    <p class="home__description">Marketing is no longer about the stuff that you make, 
-                        but about the stories you tell.</p>
+                    <h1 class="home__title">Hi, I'm Po Nguyen</h1>
+                    <h3 class="home__subtitle">CEO & Founder of S.Future | Entrepreneur</h3>
+                    <p class="home__description">If you are not willing to risk the unusual, you will have to settle for the ordinary.</p>
                         <a href="#about" class="button"><i class="uil uil-user button__icon"></i>
                         More About Me
                         </a>
@@ -94,7 +100,7 @@
                         <i class="uil uil-facebook-messenger info__icon"></i>
                         <div>
                             <h3 class="info__title">Messenger</h3>
-                            <span class="info__subtitle">user.fb123</span>
+                            <span class="info__subtitle">m.me/fsponguyen</span>
                         </div>
                     </div>
 
@@ -126,26 +132,28 @@
                 <img src="assets/img/about-img.png" alt="" class="about__img">
                 <div class="about__data">
                     <h3 class="about__heading">Hello, I'm Po Nguyen, CEO & Founder of S.Future</h3>
-                    <p class="about__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p class="about__description">A life of comfort will kill you silently.
+                        Nothing changes if nothing changes. It's torture to make yourself comfortable in your own unhappiness. 
+                        My mission is to revive the dreams, the goals, and the passions that many have forgotten.
+                    </p>
 
                         <div class="about__info grid">
                             <div class="about__box">
                                 <i class="uil uil-award about__icon"></i>
-                                <h3 class="about__title">Experiences</h3>
+                                <h3 class="about__title">Entrepreneur</h3>
                                 <span class="about__subtitle">5+ years</span>
                             </div>
                             
                             <div class="about__box">
                                 <i class=" uil uil-suitcase-alt about__icon"></i>
-                                <h3 class="about__title">Completed</h3>
-                                <span class="about__subtitle">Public Speaking</span>
+                                <h3 class="about__title">Business</h3>
+                                <span class="about__subtitle">3+ years</span>
                             </div>
 
                             <div class="about__box">
-                                <i class="uil uil-headphones-alt about__icon"></i>
-                                <h3 class="about__title">Support</h3>
-                                <span class="about__subtitle">Online 24/7</span>
+                                <i class="uil uil-life-ring about__icon"></i>
+                                <h3 class="about__title">Life Coach</h3>
+                                <span class="about__subtitle">3+ years</span>
                             </div>
                         </div>
                         <a href="#contact" class="button"><i class="uil uil-navigator button__icon"></i>
@@ -899,7 +907,7 @@
                     </div>
                 </div>
                 <p class="footer__copy">&#169; S.Future - Po Nguyen. All right reserved</p>
-                
+
             </div>
         </footer>
 
