--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
         <!--===== Skills =====-->
         <section class="skills section" id="skills">
-            <h2 data-heading="My Abilities" class="section__title">My Experience</h2>
+            <h2 data-heading="My Abilities" class="section__title">My Expertises</h2>
 
             <div class="skills__container container grid">
                 <div class="skills__tabs">
@@ -284,7 +284,7 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">HTML</h3>
+                                    <h3 class="skills__name">Networking</h3>
                                     <span class="skills__number">90%</span>
                                 </div>
 
@@ -294,7 +294,7 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">CSS</h3>
+                                    <h3 class="skills__name">Marketing</h3>
                                     <span class="skills__number">80%</span>
                                 </div>
 
@@ -304,32 +304,32 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">JavaScript</h3>
-                                    <span class="skills__number">60%</span>
+                                    <h3 class="skills__name">Analytical Thinking</h3>
+                                    <span class="skills__number">85%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage" style="width: 60%;"></span>
+                                    <span class="skills__percentage" style="width: 85%;"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Angular</h3>
-                                    <span class="skills__number">62%</span>
+                                    <h3 class="skills__name">Leadership</h3>
+                                    <span class="skills__number">75%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage" style="width: 62%;"></span>
+                                    <span class="skills__percentage" style="width: 75%;"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">CI/CD</h3>
-                                    <span class="skills__number">60%</span>
+                                    <h3 class="skills__name">Team Building</h3>
+                                    <span class="skills__number">70%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage" style="width: 60%;"></span>
+                                    <span class="skills__percentage" style="width: 70%;"></span>
                                 </div>
                             </div>
                         </div>
@@ -339,7 +339,7 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Photoshop</h3>
+                                    <h3 class="skills__name">Communication</h3>
                                     <span class="skills__number">90%</span>
                                 </div>
 
@@ -349,7 +349,7 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Figma</h3>
+                                    <h3 class="skills__name">Problem-solving</h3>
                                     <span class="skills__number">80%</span>
                                 </div>
 
@@ -359,32 +359,32 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">UX/UI</h3>
-                                    <span class="skills__number">60%</span>
+                                    <h3 class="skills__name">Time Management</h3>
+                                    <span class="skills__number">95%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage" style="width: 60%;"></span>
+                                    <span class="skills__percentage" style="width: 95%;"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Photgraphy</h3>
-                                    <span class="skills__number">62%</span>
+                                    <h3 class="skills__name">Collaboration</h3>
+                                    <span class="skills__number">92%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage" style="width: 62%;"></span>
+                                    <span class="skills__percentage" style="width: 92%;"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">CI/CD</h3>
-                                    <span class="skills__number">60%</span>
+                                    <h3 class="skills__name">Creativity</h3>
+                                    <span class="skills__number">78%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage" style="width: 60%;"></span>
+                                    <span class="skills__percentage" style="width: 78%;"></span>
                                 </div>
                             </div>
                         </div>
@@ -394,52 +394,52 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">HTML</h3>
-                                    <span class="skills__number">90%</span>
+                                    <h3 class="skills__name">Confidence</h3>
+                                    <span class="skills__number">95%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage" style="width: 90%;"></span>
+                                    <span class="skills__percentage" style="width: 95%;"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">CSS</h3>
-                                    <span class="skills__number">80%</span>
+                                    <h3 class="skills__name">Presentation Style</h3>
+                                    <span class="skills__number">82%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage" style="width: 80%;"></span>
+                                    <span class="skills__percentage" style="width: 82%;"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">JavaScript</h3>
-                                    <span class="skills__number">60%</span>
+                                    <h3 class="skills__name">Passion</h3>
+                                    <span class="skills__number">97%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage" style="width: 60%;"></span>
+                                    <span class="skills__percentage" style="width: 97%;"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Angular</h3>
-                                    <span class="skills__number">62%</span>
+                                    <h3 class="skills__name">Connecting with Audience</h3>
+                                    <span class="skills__number">75%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage" style="width: 62%;"></span>
+                                    <span class="skills__percentage" style="width: 75%;"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">CI/CD</h3>
-                                    <span class="skills__number">60%</span>
+                                    <h3 class="skills__name">Body Language</h3>
+                                    <span class="skills__number">72%</span>
                                 </div>
 
                                 <div class="skills__bar">
-                                    <span class="skills__percentage" style="width: 60%;"></span>
+                                    <span class="skills__percentage" style="width: 72%;"></span>
                                 </div>
                             </div>
                         </div>
