--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
               CEO & Founder of S.Future | Entrepreneur
             </h3>
             <p class="home__description">
-              Based in NC, USA. I lead, advise, and assist individuals who are looking to begin their 
-              entrepreneurship journey. The journey to regain their dreams of achieving financial independence,
-              freedom of time, and inspire others. 
+              Based in NC, USA. I lead, advise, and assist individuals who are
+              looking to begin their entrepreneurship journey. The journey to
+              regain their dreams of achieving financial independence, freedom
+              of time, and inspire others.
             </p>
             <a href="#about" class="button"
               ><i class="uil uil-user button__icon"></i>
@@ -149,14 +150,12 @@
 
       <!--===== About =====-->
       <section class="about section" id="about">
-        <h2 data-heading="My Intro" class="section__title">About Me</h2>
+        <h2 data-heading="About Me" class="section__title">Mission</h2>
 
         <div class="about__container container grid">
           <img src="assets/img/about-img.png" alt="" class="about__img" />
           <div class="about__data">
-            <h3 class="about__heading">
-              Design Your Life
-            </h3>
+            <h3 class="about__heading">Design Your Life</h3>
             <p class="about__description">
               A life of comfort will kill you silently. Nothing changes if
               nothing changes. It's torture to make yourself comfortable in your
@@ -492,35 +491,40 @@
 
       <!--===== Work =====-->
       <section class="work section" id="work">
-        <h2 data-heading="My Portfolio" class="section__title">Recent Works</h2>
+        <h2 data-heading="My Shop" class="section__title">Favorite Products</h2>
 
         <div class="work__filters">
           <span class="work__item active-work" data-filter="all">All</span>
-          <span class="work__item" data-filter=".web">Web</span>
-          <span class="work__item" data-filter=".app">App</span>
-          <span class="work__item" data-filter=".design">Design</span>
+          <span class="work__item" data-filter=".web">Health</span>
+          <span class="work__item" data-filter=".app">Beauty</span>
+          <span class="work__item" data-filter=".design">Fitness</span>
         </div>
 
         <div class="work__container container grid">
           <div class="work__card mix web">
-            <img src="assets/img/work-1.webp" alt="" class="work__img" />
-            <h3 class="work__title">Web Design</h3>
+            <img src="assets/img/work-1.png" alt="" class="work__img" />
+            <h3 class="work__title">Nutrilite Double X</h3>
             <span class="work__button"
-              >Demo
+              >Information
               <i class="uil uil-arrow-right work__button-icon"></i>
             </span>
             <div class="portfolio__item-details">
-              <h3 class="details__title">The services provide for design</h3>
+              <h3 class="details__title">
+                Nutrilite™ Double X™ Multivitamin - 31 Day Supply
+              </h3>
               <p class="details_description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Nutrilite™Double X™Multivitamin is a powerhouse of 12 essential
+                vitamins, 10 essential minerals including vitamins A to E,
+                calcium, zinc, magnesium, selenium and more, and 22 nutrients
+                from fruits, vegetables and herbs – from plants grown on our
+                Nutrilite™ farms and partner farms.
               </p>
               <ul class="details__info">
                 <li>Created - <span>4 dec 2020</span></li>
                 <li>Technologies - <span>html css</span></li>
                 <li>Role - <span>frontend</span></li>
                 <li>
-                  View - <span><a href="#">www.domain.com</a></span>
+                  View - <span><a href="https://amwy.me/bpoue7vfY" target="_blank">Check out the product</a></span>
                 </li>
               </ul>
             </div>
