--- a/index.html
+++ b/index.html
@@ -504,10 +504,10 @@
           <div class="work__card mix web">
             <img src="assets/img/work-1.png" alt="" class="work__img" />
             <h3 class="work__title">Nutrilite Double X</h3>
-            <span class="work__button"
-              >Information
+            <a href="https://www.amway.com/en_US/myshop/sfuture_pn" target="_blank" class="work__button"
+              >More Information
               <i class="uil uil-arrow-right work__button-icon"></i>
-            </span>
+            </a>
             <div class="portfolio__item-details">
               <h3 class="details__title">
                 Nutrilite™ Double X™ Multivitamin - 31 Day Supply
@@ -524,19 +524,24 @@
                 <li>Technologies - <span>html css</span></li>
                 <li>Role - <span>frontend</span></li>
                 <li>
-                  View - <span><a href="https://amwy.me/bpoue7vfY" target="_blank">Check out the product</a></span>
+                  View -
+                  <span
+                    ><a href="https://www.amway.com/en_US/my-account/myshop" target="_blank"
+                      >Check out the product</a
+                    ></span
+                  >
                 </li>
               </ul>
             </div>
           </div>
 
           <div class="work__card mix app">
-            <img src="assets/img/work-2.webp" alt="" class="work__img" />
-            <h3 class="work__title">App Design</h3>
-            <span class="work__button"
-              >Demo
+            <img src="assets/img/work-2.png" alt="" class="work__img" />
+            <h3 class="work__title">Artistry™ Men System</h3>
+            <a href="https://www.amway.com/en_US/myshop/sfuture_pn" target="_blank" class="work__button"
+              >More Information
               <i class="uil uil-arrow-right work__button-icon"></i>
-            </span>
+            </a>
             <div class="portfolio__item-details">
               <h3 class="details__title">
                 Mobile App Landing design & app maintain.
@@ -550,19 +555,19 @@
                 <li>Technologies - <span>html css</span></li>
                 <li>Role - <span>frontend</span></li>
                 <li>
-                  View - <span><a href="#">www.domain.com</a></span>
+                  View - <span><a href="https://www.amway.com/en_US/my-account/myshop">www.domain.com</a></span>
                 </li>
               </ul>
             </div>
           </div>
 
           <div class="work__card mix design">
-            <img src="assets/img/work-3.webp" alt="" class="work__img" />
-            <h3 class="work__title">Brand Design</h3>
-            <span class="work__button"
-              >Demo
-              <i class="uil uil-arrow-right work__button-icon"></i>
-            </span>
+            <img src="assets/img/work-3.png" alt="" class="work__img" />
+            <h3 class="work__title">XS™ Protein Pods</h3>
+            <a href="https://www.amway.com/en_US/myshop/sfuture_pn" target="_blank" class="work__button"
+            >More Information
+            <i class="uil uil-arrow-right work__button-icon"></i>
+          </a>
             <div class="portfolio__item-details">
               <h3 class="details__title">
                 Logo Design creativity & Application
@@ -583,38 +588,51 @@
           </div>
 
           <div class="work__card mix web">
-            <img src="assets/img/work-4.webp" alt="" class="work__img" />
-            <h3 class="work__title">App Design</h3>
-            <span class="work__button"
-              >Demo
+            <img src="assets/img/work-4.png" alt="" class="work__img" />
+            <h3 class="work__title">
+              Nutrilite Concentrated Fruits and Vegetables
+            </h3>
+            <a href="https://www.amway.com/en_US/myshop/sfuture_pn" target="_blank" class="work__button"
+              >More Information
               <i class="uil uil-arrow-right work__button-icon"></i>
-            </span>
+            </a>
             <div class="portfolio__item-details">
               <h3 class="details__title">
-                Mobile app landing design % services
+                Nutrilite™ Concentrated Fruits and Vegetables
               </h3>
               <p class="details_description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Made with whole food extracts with antioxidants that help fight
+                free radicals, every Nutrilite™ Concentrated Fruits and
+                Vegetables tablet contains the phytonutrient equivalent of more
+                than 5 servings of fruits and vegetables with a nutrient blend
+                full of blueberry, spinach, carrot, broccoli and more! Tapping
+                into the power of 13 nutrient-rich (and colorful) ingredients
+                helps support your circulatory and heart health, and promote
+                eye, colon, and prostate health.
               </p>
               <ul class="details__info">
                 <li>Created - <span>4 dec 2020</span></li>
                 <li>Technologies - <span>html css</span></li>
                 <li>Role - <span>frontend</span></li>
                 <li>
-                  View - <span><a href="#">www.domain.com</a></span>
+                  View -
+                  <span
+                    ><a href="https://amwy.me/x5W5AKuxE" target="_blank"
+                      >Check out the product</a
+                    ></span
+                  >
                 </li>
               </ul>
             </div>
           </div>
 
           <div class="work__card mix app">
-            <img src="assets/img/work-5.webp" alt="" class="work__img" />
-            <h3 class="work__title">Brand Design</h3>
-            <span class="work__button"
-              >Demo
+            <img src="assets/img/work-5.png" alt="" class="work__img" />
+            <h3 class="work__title">Artistry Skin Nutrition™</h3>
+            <a href="https://www.amway.com/en_US/myshop/sfuture_pn" target="_blank" class="work__button"
+              >More Information
               <i class="uil uil-arrow-right work__button-icon"></i>
-            </span>
+            </a>
             <div class="portfolio__item-details">
               <h3 class="details__title">Design for technology % services</h3>
               <p class="details_description">
@@ -633,12 +651,12 @@
           </div>
 
           <div class="work__card mix design">
-            <img src="assets/img/work-6.webp" alt="" class="work__img" />
-            <h3 class="work__title">Web Design</h3>
-            <span class="work__button"
-              >Demo
+            <img src="assets/img/work-6.png" alt="" class="work__img" />
+            <h3 class="work__title">XS™ Sports Protein Shakes</h3>
+            <a href="https://www.amway.com/en_US/myshop/sfuture_pn" target="_blank" class="work__button"
+              >More Information
               <i class="uil uil-arrow-right work__button-icon"></i>
-            </span>
+            </a>
             <div class="portfolio__item-details">
               <h3 class="details__title">App for technology & services</h3>
               <p class="details_description">
@@ -658,7 +676,7 @@
         </div>
       </section>
 
-      <!-- Portfolio Popup -->
+      <!-- Portfolio Popup
       <div class="portfolio__popup">
         <div class="portfolio__popup-inner">
           <div class="portfolio__popup-content grid">
@@ -667,38 +685,46 @@
             ></span>
             <div class="pp__thumbnail">
               <img
-                src="assets/img/work-2.webp"
+                src="assets/img/work-1.png"
                 alt=""
                 class="portfolio__popup-img"
               />
             </div>
             <div class="portfolio__popup-info">
               <div class="portfolio__popup-subtitle">
-                Featured - <span>Design</span>
+                
               </div>
               <div class="portfolio__popup-body">
-                <h3 class="details__title">App for technology & services</h3>
+                <h3 class="details__title">
+                  Nutrilite™ Double X™ Multivitamin - 31 Day Supply
+                </h3>
                 <p class="details_description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Nutrilite™Double X™Multivitamin is a powerhouse of 12
+                  essential vitamins, 10 essential minerals including vitamins A
+                  to E, calcium, zinc, magnesium, selenium and more, and 22
+                  nutrients from fruits, vegetables and herbs – from plants
+                  grown on our Nutrilite™ farms and partner farms.
                 </p>
                 <ul class="details__info">
-                  <li>Created - <span>4 dec 2020</span></li>
-                  <li>Technologies - <span>html css</span></li>
-                  <li>Role - <span>frontend</span></li>
+                  <li></li>
                   <li>
-                    View - <span><a href="#">www.domain.com</a></span>
+                    View -
+                    <span
+                      ><a href="https://www.amway.com/en_US/myshop/sfuture_pn" target="_blank"
+                        >my shop</a
+                      ></span
+                    >
                   </li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!--===== Services =====-->
       <section class="services section" id="services">
-        <h2 data-heading="Services" class="section__title">What I Offer</h2>
+        <h2 data-heading="Services" class="section__title">What I Share</h2>
 
         <div class="services__container container grid">
           <div class="services__content">
