--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
             <a
               href="https://www.amway.com/en_US/myshop/sfuture_pn"
               target="_blank"
-              class="work__button"
+              class="link__button"
               >More Information
               <i class="uil uil-arrow-right work__button-icon"></i>
             </a>
@@ -499,7 +499,7 @@
             <a
               href="https://www.amway.com/en_US/myshop/sfuture_pn"
               target="_blank"
-              class="work__button"
+              class="link__button"
               >More Information
               <i class="uil uil-arrow-right work__button-icon"></i>
             </a>
@@ -511,7 +511,7 @@
             <a
               href="https://www.amway.com/en_US/myshop/sfuture_pn"
               target="_blank"
-              class="work__button"
+              class="link__button"
               >More Information
               <i class="uil uil-arrow-right work__button-icon"></i>
             </a>
@@ -525,7 +525,7 @@
             <a
               href="https://www.amway.com/en_US/myshop/sfuture_pn"
               target="_blank"
-              class="work__button"
+              class="link__button"
               >More Information
               <i class="uil uil-arrow-right work__button-icon"></i>
             </a>
@@ -537,7 +537,7 @@
             <a
               href="https://www.amway.com/en_US/myshop/sfuture_pn"
               target="_blank"
-              class="work__button"
+              class="link__button"
               >More Information
               <i class="uil uil-arrow-right work__button-icon"></i>
             </a>
@@ -549,7 +549,7 @@
             <a
               href="https://www.amway.com/en_US/myshop/sfuture_pn"
               target="_blank"
-              class="work__button"
+              class="link__button"
               >More Information
               <i class="uil uil-arrow-right work__button-icon"></i>
             </a>
@@ -557,7 +557,6 @@
         </div>
       </section>
 
-      Portfolio Popup
       <div class="portfolio__popup">
         <div class="portfolio__popup-inner">
           <div class="portfolio__popup-content grid">
