--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!--========== MAIN CSS ==========-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
+    <link rel="icon" href="assets/img/home-img.png" type="image/icon type" />
     <title>Po Nguyen</title>
   </head>
 
@@ -200,11 +201,12 @@
               <i class="uil uil-gold"></i> Work
             </h3>
 
-
             <div class="timeline">
               <div class="timeline__item">
                 <div class="circle__dot"></div>
-                <h3 class="timeline__title">Super Future LLC (Morrisville, NC)</h3>
+                <h3 class="timeline__title">
+                  Super Future LLC (Morrisville, NC)
+                </h3>
                 <p class="timeline__text">CEO & Founder</p>
                 <span class="timeline__date"
                   ><i class="uil uil-calendar-alt"></i>
@@ -220,7 +222,6 @@
                   2013 - 2017
                 </span>
               </div>
-
             </div>
           </div>
 
@@ -926,7 +927,9 @@
           <div class="footer__container container grid">
             <div>
               <h1 class="footer__title">Po Nguyen</h1>
-              <span class="footer__subtitle">Network Marketing Professional</span>
+              <span class="footer__subtitle"
+                >Network Marketing Professional</span
+              >
             </div>
 
             <ul class="footer__links">
