--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--========== MAIN CSS ==========-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <link rel="icon" href="assets/img/home-img.png" type="image/icon type" />
+    <link rel="icon" href="assets/img/logo.png" type="image/icon type" />
     <title>Po Nguyen</title>
   </head>
 
